Portfolio is fixed except with iPhone 5 and 6 spacing on name tags - AT

--- a/app/src/viewcontrols/portfolio/portfolio.vc.less
+++ b/app/src/viewcontrols/portfolio/portfolio.vc.less
@@ -6,9 +6,9 @@
 	}
 	hr.line{
 			width:100%;	
-			height:1px;
+			height:3px;
 			background-color: #678e9a;
-			border:2px solid #678e9a;
+			border:0;
 			}
 	.row {
 		list-style: none;
@@ -34,21 +34,18 @@
 			font-family: 'Gotham-Book';
 			font-weight: 100;
 			}
-			}
-			img {
-				margin-right: 10px;
-			}
+		}
+		img {
+			margin-right: 10px;
 		}
 	}
+}
 	/*End of Portfolio Header*/
 
 	//TESTIMONIALS//
 
 	//Standard formating for all three divs//
 	.TestimonialColorBlock {
-
-
-		//Div for Testimonial Content//
 		.Testimonial {
 			max-width: 65%;
 			margin: auto;
@@ -56,10 +53,10 @@
                 margin-left: 0.2em;
                 text-align: left;
             }
-
-			//Div for name of customer//
+			p {
+				margin-top: .25em;
+			}
 			.nameofCustomer {
-				//font-family: 'Gotham-Black';
                 .flex-icon {
                     display: flex;
                     justify-content: space-between;
@@ -73,36 +70,23 @@
 				
 				h3 {
 					font-family: 'Gotham-Bold';
-					//font-weight: 700;
 					font-size: 1.6em;
 					margin-bottom: 0.2em;
-					letter-spacing: -2px;
+					letter-spacing: -1.5px;
 				}
 
 				.title {
 						font-weight: 100;
 						font-family: 'Gotham-Book';
-						//letter-spacing: -2px;
-						}
+				}
 
             }
-			
-
-			//Div for the image of the customer//
 			.image {
-               // padding: 0.1em;
 				height: 250x;
 				width: 275px;
-				// float: left;
-				//margin: 0 25px 10px 10px;
 			}
-			//END OF IMAGE DIV//
-
 		}
-		//END OF TESTIMONIAL DIV//
-			
 	}
-	//END OF TESTIMONIAL COLOR BLOCK//
 
 /*****Extras****/
 /*This is for unique or extraneous custom stylings of elements
@@ -116,17 +100,9 @@ that would have been too much work to try and nest*/
 
 	#backgroundblock {
 		color: #ffffff;
-		//padding-bottom: 50px;
-		//height: 350px;
 		#SecondBlockUnderline {
 			border-bottom: 3px solid #ffffff;
 		}
 	}
-
-	.otherHRLines {
-		height: 3px;
-		background-color: #678e9a;
-	}
-
 
 }
